styles/index.css
* {
  margin: 0 auto;
  padding: 0;
  box-sizing: border-box;
}

html {
  font-size: 100%;
  scroll-behavior: smooth;
}

body {
  background-color: rgb(39, 72, 30);
  min-height: 100vh;
  margin: 0;
  /* overflow: hidden; */
  color: rgb(46,44, 32);
}

h2 {
  font-size: larger;
}
h3 {
  margin-top: 0.5rem;
  margin-bottom: 1rem;
}

.smaller-text {
  font-size: small;
}

.bold {
  font-weight: bold;
}

.content {
  width: 60rem;
  padding-left: 1rem;
  padding-right: 1rem;
  padding-bottom: 1.2rem;
  background-color: rgb(241,241,239);
  margin-top: 1rem;
  margin-bottom: 1rem;
  min-height: calc(100vh - 2rem);
}

.top-section {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding-left: 4rem;
  padding-right: 4rem;
}

.handwriting {
  font-family: handwriting;
  font-size: 5rem;
}

.handwriting-small {
  font-family: handwriting;
  font-size: 1.8rem;
}

.stacked {
  display: flex;
  flex-direction: column;
  padding-top: 1rem;
  align-items: center;
  margin-left: 0;
}

.wrap {
  display: flex;
  flex-direction: row;
}

.left-column {
  display: flex;
  flex-direction: column;
  margin: 0;
  width: 20%;
}

.no-decoration {
  text-decoration: none;
  list-style: none;
  color: rgb(46,44, 32);
}

.anything-else {
  margin-left: 1rem;
  margin-right: 1rem;
  padding: 1rem;
  width: 80%;
}

nav {
  margin-right: 0;
}

ul {
  display: flex;
  flex-direction: column;
  padding: 1rem;
}

ul > li {
  margin-left: 0;
  padding-left: 0;
  padding-top: 1rem;
}

li:hover {
  text-decoration: underline;
}

img {
  max-width: 100%;
  height: auto;
  display: block;
}

.month-year {
  margin-top: 1rem;
}

.in-between-title {
  margin-top: 0.5rem;
  display: inline-block;
}

.in-between-navigation {
  margin-top: 2.5rem;
  align-items: center;
}

.table-head {
  text-align: right;
  padding: 0 1rem;
}

.month {
  display: flex;
  flex-direction: column;
  margin-bottom: 1rem;
}

.month > * {
  margin-left: 0;
}

.date {
  margin-left: 3rem;
  color: rgba(46,44, 32, 0.5);
}

td {
  vertical-align: top;
}

img {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.categories {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.project-subsection {
  margin-bottom: 5rem;
}

.hover-underline:hover {
  text-decoration: underline;
}

.shifting-text {
  display: inline-block;
  white-space: nowrap;
}

.shifting-text-wrap {
  overflow: hidden;
  width: 100%;
}

.title-and-date {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.article-wrap {
  display: inline-block;
  width: 100%;
}

.article-wrap:hover {
  background-color: rgba(164, 171, 134, 0.5);
}

.title-and-date span {
  flex: 1;
  margin-left: 0;
}

.title-and-date span.date {
  text-align: right;
  max-width: 10rem;
}

@font-face {
  font-family: handwriting;
  font-stretch: expanded;
  src: url("../assets/handwriting.ttf");
}

.merriweather-light {
  font-family: "Merriweather", serif;
  font-weight: 300;
  font-style: normal;
}

.merriweather-regular {
  font-family: "Merriweather", serif;
  font-weight: 400;
  font-style: normal;
}

.merriweather-bold {
  font-family: "Merriweather", serif;
  font-weight: 700;
  font-style: normal;
}

.merriweather-black {
  font-family: "Merriweather", serif;
  font-weight: 900;
  font-style: normal;
}

.merriweather-light-italic {
  font-family: "Merriweather", serif;
  font-weight: 300;
  font-style: italic;
}

.merriweather-regular-italic {
  font-family: "Merriweather", serif;
  font-weight: 400;
  font-style: italic;
}

.merriweather-bold-italic {
  font-family: "Merriweather", serif;
  font-weight: 700;
  font-style: italic;
}

.merriweather-black-italic {
  font-family: "Merriweather", serif;
  font-weight: 900;
  font-style: italic;
}

@media (max-width: 768px) {
  * {
    font-size: smaller;
  }

  .content {
    width: 100%;
  }

  .categories {
    flex-direction: column;
  }

  .categories > * {
    margin-left: 0;
  }
  
  .smaller-text {
    font-size: x-small;
  }

  h2 {
    font-size: medium;
  }

  .handwriting {
    font-family: handwriting;
    font-size: 3rem;
  }
  
  .handwriting-small {
    font-family: handwriting;
    font-size: 1rem;
  }

  .title-and-date {
    flex-direction: column;
  }
}

